# tailnet-trashmonitor

./: .bazelignore  .bazelrc  .gitignore  .gitleaks.toml  .sops.yaml  AGENTS.md  BUILD.bazel  Justfile  MODULE.bazel  README.md  README.txt  flake.nix
ansible/: README.txt  ansible.cfg
ansible/inventory/: hosts.yml
ansible/inventory/host_vars/: capture-host-a.yml
ansible/playbooks/: trashcam.yml
ansible/roles/trashcam/defaults/: main.yml
ansible/roles/trashcam/handlers/: main.yml
ansible/roles/trashcam/meta/: main.yml
ansible/roles/trashcam/tasks/: main.yml
ansible/roles/trashcam/templates/: camera.env.j2
capture/: BUILD.bazel
capture/config/: trashcam.env.example
capture/rpm/: README.txt  trashcam.spec
capture/systemd/: trashcam.target  trashcam@.service
otel/: alert-rules.yaml  grafana-dashboard.json
scripts/: dns-bootstrap.py  health.py
server/: BUILD.bazel  Caddyfile  entrypoint.sh  mediamtx.yml
server/k8s/: cert.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  servicemonitor.yaml
spa/: .gitignore  BUILD.bazel  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
spa/src/: app.css  app.html
spa/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
