load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

# Build platform for the cluster OCI image. The cluster runs amd64;
# macOS host builds resolve via this constraint so rules_oci picks the
# right base manifest.
platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# Top-level meta target: builds RPM + cluster image.
filegroup(
    name = "all_artifacts",
    srcs = [
        "//capture:trashcam-rpm",
        "//server:image",
        "//spa:bundle",
    ],
)
